Add conversational UI, video generation, map features, and story generator scripts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Democratic Accountability Platform</title>
+    <title>Project Pain Point - Citizen Voice Intelligence Platform</title>
+    <meta name="description" content="Share your experience with federal policies. AI-verified citizen stories connected to real-time government data, creating accountability through transparency." />
   </head>
   <body>
     <div id="root"></div>
